@@ -32,4 +32,12 @@
       name="collective.library"
       />
 
+  <browser:viewlet
+    name="plone.belowcontenttitle.documentbyline"
+    for="collective.library.interfaces.ILibraryFolderProxy"
+    manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+    class=".viewlets.DocumentBylineViewlet"
+    permission="zope2.View"
+    />
+
 </configure>
